fixed mobile cutoffs on top

--- a/styles/events.css
+++ b/styles/events.css
@@ -123,3 +123,10 @@
         padding-right: 0;
     }
 }
+
+@media (max-width: 576px) {
+    .events-container {
+        margin-top: 13rem;
+        padding-top: 2rem;
+    }
+}
